# AudioMind

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-tts.txt
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  api.py  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py
apps/api/audiomind/: __init__.py  chunking.py  config.py  ingestion.py  jobs.py  llm.py  rag.py  repository.py  services.py  tts.py
apps/api/tests/: test_audio_generator.py  test_chunking.py  test_repository.py  test_streamlit_app.py  test_web_ingestion.py
apps/api/tests/integration/: test_kokoro.py
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/workspace/: page.tsx
apps/web/lib/: api.ts
audiomind/: config.py  embeddings.py  llm.py  models.py  narration.py  rag.py  repository.py  tts.py  vector_store.py  web_ingestion.py
evaluation/: dataset.example.jsonl  dataset.jsonl  evaluate.py
scripts/: __init__.py  kokoro_worker.py
tests/: test_api.py  test_audio_generator.py  test_rag_integration.py
