[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audiomind"
version = "1.0.0"
description = "Source-grounded RAG study tutor and chapter-wise audiobook generator"
readme = "../../README.md"
requires-python = ">=3.10"
authors = [{name = "AudioMind Contributors"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
include = ["audiomind*"]
